# rag-evaluation-agent

./: .gitignore  GRAFANA.md  LICENSE  MEMENTO_DIAGNOSTIC_RAG.md  PHOENIX.md  README.md  docker-compose.yml  eval_reel_locatif.py  grafana_smoke.py  phoenix_export.py  phoenix_perf_smoke.py  phoenix_smoke.py  phoenix_trace.py  phoenix_unified_smoke.py  pyproject.toml  rag_evaluation_agent.py  requirements-core.txt  requirements-phoenix.txt  requirements.txt  test_rag_evaluation_agent.py
.github/workflows/: ci.yml
monitoring/: docker-compose.grafana.yml  prometheus.yml
monitoring/grafana/dashboards/: rag_eval.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
